load datas and yolov5 model
Co-authored-by: ProtonGuillaume <ProtonGuillaume@users.noreply.github.com>
Co-authored-by: Arthur Molia <ArthurMolia@users.noreply.github.com>
Co-authored-by: hilaireale <hilaireale@users.noreply.github.com>

--- a/dataset/Hymenoptera.v2i.yolov5pytorch/data.yaml
+++ b/dataset/Hymenoptera.v2i.yolov5pytorch/data.yaml
@@ -1,5 +1,5 @@
-train: ../train/images
-val: ../valid/images
+train: ../dataset/Hymenoptera.v2i.yolov5pytorch/train/images
+val: ../dataset/Hymenoptera.v2i.yolov5pytorch/valid/images
 
 nc: 5
 names: ['Frelon Europ-en', 'anthophila', 'vespa orientalis', 'vespa velutina', 'vespoidea']
